[tool.poetry]
name = "henry"
version = "1.0"
description = ""
authors = ["Ozenne Francois <francois.ozenne@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.6"
fastapi = "^0.54.1"
uvicorn = "^0.11.5"
sqlalchemy = "^1.3.16"
psycopg2 = "^2.8.5"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
black = "^19.10b0"
flake8 = "^3.7.9"
flake8-awesome = "^1.2.1"
flake8-bandit = "^2.1.2"
flake8-alfred = "^1.1.1"
flake8-black = "^0.1.1"
flake8-eradicate = "^0.3.0"
flake8-fixme = "^1.1.1"
flake8-mutable = "^1.2.0"
flake8-mypy = "^17.8.0"
flake8-print = "^3.1.4"
flake8-sql = "^0.4.0"
flake8-cognitive-complexity = "^0.0.2"
pandas_vet = "^0.2.2"
flake8-functions = "^0.0.4"
flake8-expression-complexity = "^0.0.7"
flake8-use-fstring = "^1.0"
flake8-docstrings = "^1.5.0"
flakehell = "^0.3.3"
wemake-python-styleguide = "^0.14.0"

[tool.isort]
line_length = 88

[tool.flakehell]
exclude = ["example.py"]
format = "grouped"
max_line_length = 88
show_source = true

[tool.flakehell.plugins]
"*" = ["+*"] # enable everything
"flake8-docstrings" = ["-*"] # explicitly disable plugin
"flake8-quotes" = ["-*"] # explicitly disable plugin
pyflakes = ["-F401"]  # include everything in pyflakes except F401
flake8-isort = ["-I002"]  # include everything in pyflakes except F401

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

